...
    
    // MARK: - Setup
    // Declare the sentencesTextViewHeightConstraint as an instance variable in your view controller
    var sentencesTextViewHeightConstraint: NSLayoutConstraint!
    
    internal func setupAccessibilityIdentifier() {
        sentenceTextField.accessibilityIdentifier = "SentenceTextField"
        languageButton.accessibilityIdentifier = "LanguageButton"
        tokenizeButton.accessibilityIdentifier = "TokenizeButton"
    }

    internal func setupUI() {
        view.backgroundColor = UIColor.white

        setupAnimationView()
...
